# vmcontrol

./: .gitignore  Cargo.toml  README.md  config.yaml
.github/workflows/: windows-release.yml
linux/: Cargo.toml  README.md  install.sh
linux/src/: api_helpers.rs  config.rs  db.rs  guest_agent.rs  lib.rs  mds.rs  models.rs  operations.rs  server.rs
linux/static/: app.js  index.html  vnc.html
mac/: Cargo.toml  README.md  build.rs  install.sh
mac/src/: api_helpers.rs  config.rs  db.rs  disk_edit.rs  lib.rs  mds.rs  models.rs  operations.rs  server.rs  ssh.rs
mac/static/: app.js  index.html  style.css  vnc.html
src/: api_helpers.rs  config.rs  db.rs  disk_edit.rs  guest_agent.rs  lib.rs  main.rs  mds.rs  models.rs  operations.rs  server.rs  ssh.rs
static/: app.js  index.html  style.css  vnc.html
windows/: Cargo.toml  README.md  build.rs  install.bat  readme.txt  restart.bat  start.bat  status.bat  stop.bat  update.bat
windows/src/: api_helpers.rs  config.rs  db.rs  disk_edit.rs  mds.rs  models.rs  operations.rs  server.rs  ssh.rs
windows/static/: app.js  bypass-tpm.reg  index.html  style.css  vnc.html
