[package]
name = "vm_ctl"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
