[package]
name = "vm_ctl"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
reqwest = { version = "0.13", features = ["blocking"] }
actix-web = "4.13"
actix-files = "0.6"
tokio = { version = "1.49", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = "0.4"
