[package]
name = "vm_ctl"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
ureq = "3"
actix-web = "4.13"
actix-files = "0.6"
tokio = { version = "1.49", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = "0.4"
zip = "2"
futures-util = "0.3"
actix-multipart = "0.7"
base64 = "0.22"

# Drop-in UnixStream for Windows (AF_UNIX via Win10 1803+).
# Keeps qemu_monitor_cmd / QGA / MDS code nearly identical across platforms.
[target.'cfg(windows)'.dependencies]
uds_windows = "1"
